--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 asgiref==3.8.1
 blinker==1.8.2
+Brotli==1.1.0
 build==1.2.1
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+configparser==7.0.0
+decouple==0.0.7
 dj-database-url==2.2.0
 Django==4.1.13
 fire==0.6.0
-Flask==3.0.3
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
@@ -21,6 +23,7 @@ packaging==24.1
 pillow==10.4.0
 pip-tools==7.4.1
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 Pygments==2.18.0
 pyproject_hooks==1.1.0
 python-decouple==3.8
@@ -35,6 +38,8 @@ stripe==10.4.0
 termcolor==2.4.0
 typing_extensions==4.12.2
 tzdata==2024.1
+unicode==2.9
 urllib3==2.2.2
 uvicorn==0.30.5
 Werkzeug==3.0.3
+whitenoise==6.7.0
