--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
-    "flowbite": "^1.6.4",
-    "tailwindcss": "^3.2.7"
+    "flowbite": "^2.5.1",
+    "tailwindcss": "^3.4.10"
+  },
+  "scripts": {
+    "watch": "tailwindcss -i ./static/tailwind/tailwind-input.css -o ./dist/output.css --watch"
   }
 }
