--- a/rav.yaml
+++ b/rav.yaml
@@ -2,7 +2,7 @@ scripts:
   server: cd src && python manage.py runserver
   migrate: cd src && python manage.py migrate
   freeze: venv/bin/python -m pip freeze
-  watch: npx tailwindcss -i ./src/static/tailwind/tailwind-input.css -o ./src/static/css/output.css --watch
+  watch: npx tailwindcss -i ./static/tailwind/tailwind-input.css -o ./static/tailwind/output.css --watch
   installs:
     - venv/bin/pip-compile src/requirements/requirements.in -o src/requirements.txt
     - venv/bin/python -m pip install -r src/requirements.txt
