--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "tailwindcss": "^3.4.10"
   },
   "scripts": {
-    "watch": "tailwindcss -i ./static/tailwind/tailwind-input.css -o ./dist/output.css --watch"
+    "watch": "tailwindcss -i ./static/tailwind/tailwind-input.css -o ./static/tailwind/output.css --watch"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
