--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7
 colorama==0.4.6
 dj-database-url==2.2.0
 Django==4.2
+django-tailwind==3.8.0
 fire==0.6.0
 gunicorn==22.0.0
 h11==0.14.0
