--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "devDependencies": {
-    "flowbite": "^2.5.1",
-    "tailwindcss": "^3.4.10"
+    "flowbite": "^2.5.1"
   },
   "scripts": {
-    "watch": "tailwindcss -i ./static/tailwind/tailwind-input.css -o ./static/tailwind/output.css --watch"
+  
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "flowbite-datepicker": "^1.3.0",
+    "bootstrap": "^5.3.3",
     "postcss": "^8.4.41"
   }
 }
